--- a/template/partials/footer.hbs
+++ b/template/partials/footer.hbs
@@ -1,5 +1,5 @@
 {{!-- <p class="footer">Contact: 9350099592, Connect with me@Linkedin, mailto: deepanshusharma1420@gmail.com  @copyright 2023, all rights reserved .</p> --}}
-<p class="footer">Contact: <span style="color: #05c46b; font-weight: bold;">9350099592</span>, Connect with me on <a href="https://www.linkedin.com/in/deepanshu-sharma12" target="_blank" style="color: #05c46b; text-decoration: none; font-weight: bold;">LinkedIn</a>, <a href="mailto:deepanshusharma1420@gmail.com" style="color: #05c46b; text-decoration: none; font-weight: bold;">E-mail</a> | © Copyright 2023, all rights reserved.</p>
+<p class="footer">Contact: <span style="color: #05c46b; font-weight: bold;">9350099592</span>, Connect with me on <a href="https://www.linkedin.com/in/deepanshu-sharma12" target="_blank" style="color: #05c46b; text-decoration: none; font-weight: bold;">LinkedIn</a>, <a href="mailto:deepanshusharma1420@gmail.com" style="color: #05c46b; text-decoration: none; font-weight: bold;">E-mail</a> | All rights reserved © copyright 2024</p>
 
 
 
