--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -43,12 +43,14 @@
                     completed my 10th and +2. In addition of my academic achievements I am a <strong>top-rated C++</strong> coder at hacker rank within a <strong>5 star</strong> rating and also I type at <strong>55 words per 
                     minute</strong> with over <strong>90% accuracy</strong>, ensuring swift and precise transcription of ideas and code. Although regarding to my technical skills I am currently working on <strong>C++,
                     Core Java</strong> as programming language applying <strong>OOPS</strong> principles also, <strong>Proficient in SQL</strong> for database management, I've worked on <strong>REST API</strong> projects, Familiar with <strong>AWS services</strong>,  
-                    Also I've deployed applications on both <strong>Linux</strong> and <strong>Windows</strong> platforms. As I've translated this knowledge into practical applications, and developed projects like an <strong>Car Racing Game, Weather Forecast Application</strong> etc. This hands-on experience has allowed me to develop a <strong>well-rounded skill set</strong>, expanding both sets of 
+                    Also I've deployed applications on both <strong>Linux</strong> and <strong>Windows</strong> platforms. As I've translated this knowledge into practical applications, and developed projects like an <strong>ChatGPT Clone, JWT Authentication, Car Racing Game, Weather Forecast Application</strong> etc. This hands-on experience has allowed me to develop a <strong>well-rounded skill set</strong>, expanding both sets of 
                     my development spectrum. At the end as an <strong>enthusiastic learner</strong> and <strong>job seeker</strong>, I am eager to apply these skills in real-world projects and contribute meaningfully to a <strong>software engineering team</strong>, advancing my journey in the field.</p>
             </div>
         </div>
         {{!-- <p class="footer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem amet accusantium quos nobis facere deserunt ,@copyright 2023</p> --}}
         {{>footer}}
     </div>
+
+    
 </body>
 </html>
