--- a/template/views/service.hbs
+++ b/template/views/service.hbs
@@ -10,29 +10,29 @@
 
         <div class="service-box">
             <div class="servicebox normal-text capitalize">
-                <img src="../images/Saas.jpg" alt="random image">
-                <div class="service-text-box">
-                    <h2 class="md-heading capitalize">Wep Application</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident, optio corporis vero in nulla.</p>
-                    <a href="#" class="service-btn">more</a>
-                </div>
+            <img src="../images/Saas.jpg" alt="random image">
+            <div class="service-text-box">
+            <h2 class="md-heading capitalize">Saas</h2>
+            <p>Unlock success with our cutting-edge SaaS solutions—where innovation meets efficiency. Elevate your business with seamless, powerful technology today!</p>
+             <a href="https://azure.microsoft.com/en-us/resources/cloud-computing-dictionary/what-is-saas" class="service-btn" target="_blank">more</a>
+        </div>
             </div>
             <div class="servicebox normal-text capitalize">
-                <img src="../images/Iaas.jpg" alt="random image">
-                <div class="service-text-box">
-                    <h2 class="md-heading capitalize">Wep Application</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident, optio corporis vero in nulla.</p>
-                    <a href="#" class="service-btn">more</a>
-                </div>
+            <img src="../images/Iaas.jpg" alt="random image">
+            <div class="service-text-box">
+            <h2 class="md-heading capitalize">IaaS</h2>
+            <p>Empower your business with our IaaS excellence - reliable infrastructure, seamless scalability, and unparalleled performance. Elevate your digital journey effortlessly.</p>
+            <a href="https://azure.microsoft.com/en-us/resources/cloud-computing-dictionary/what-is-iaas" class="service-btn" target="_blank">more</a>
             </div>
+        </div>
             <div class="servicebox normal-text capitalize">
-                <img src="../images/5g.jpg" alt="random image">
-                <div class="service-text-box">
-                    <h2 class="md-heading capitalize">Wep Application</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident, optio corporis vero in nulla.</p>
-                    <a href="#" class="service-btn">more</a>
-                </div>
+            <img src="../images/5g.jpg" alt="random image">
+            <div class="service-text-box">
+            <h2 class="md-heading capitalize">5G</h2>
+            <p>Experience the future with our lightning-fast 5G service—unleash speed, connectivity, and innovation. Elevate your digital experience like never before!</p>
+            <a href="https://www.qualcomm.com/5g/what-is-5g" class="service-btn" target="_blank">more</a>
             </div>
+        </div>
         </div>
         {{>footer}}
     </div>
