--- a/template/views/contact.hbs
+++ b/template/views/contact.hbs
@@ -60,7 +60,7 @@
                     bag.push(inputBag[i].value);
                 }
 
-                alert(`Hello ${bag[0]} , your email is ${bag[1]} and you mobile number is : ${bag[2]} , and i will work on your given feedback ....`);
+                alert(`Hello ${bag[0]} , your email is ${bag[1]} and your mobile number is : ${bag[2]} , and I will work on your given feedback ....`);
                 for(let i = 0;i<inputBag.length;i++){
                     inputBag[i].value="";
                 }
